# core

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  README.md  alarms.c  alarms.h  canbus.c  canbus.h  changelog.md  config.h  coolant_control.c  coolant_control.h  core_handlers.h  corexy.c  crc.c  crc.h  crossbar.c  crossbar.h  cutter_comp.c  cutter_comp.h  cutter_comp.md  cutter_comp_grblhal.h  defaults.h  driver_opts.h  driver_opts2.h  errors.c  errors.h  expanders_init.h  fs_device.c  gcode.c  gcode.h  grbl.h  grbllib.c  grbllib.h  hal.h  index.md  ioports.c  ioports.h  kinematics.h  (+88 more)
kinematics/: asymmetric_ganging.c  corexy.c  corexy.h  delta.c  delta.h  maslow.c  maslow.h  polar.c  polar.h  scara.c  scara.h  wall_plotter.c  wall_plotter.h
